# RandomJokesAPI

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: deploy-vercel.yml
api/: index.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  rate_limiter.py  security.py  status_codes.py
app/db/: __init__.py  dynamo.py  models.py
app/routes/: __init__.py  jokes.py
app/routes/jokes/: __init__.py  random.py  search.py  stats.py
app/utils/: __init__.py  middleware.py  response.py
