[project]
name = "RandomJokesAPI"
version = "1.0.1"
description = "A high-performance, serverless-ready FastAPI application that serves up jokes from AWS DynamoDB, synced automatically from S3."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "slowapi",
    "python-dotenv",
]

[tool.ruff]
# Updated to py313 (Ruff's current max) to better align with your 3.14 requirement
target-version = "py313"
line-length = 100
preview = true

[tool.ruff.lint]
# Selected for a Public API:
# E, W: pycodestyle (standard style + whitespace/EOL checks)
# F: Pyflakes (logic errors)
# I: isort (import organization)
# B: bugbear (common design flaws)
# UP: pyupgrade (modernize syntax)
# S: bandit (security / hardcoded secrets)
# T20: flake8-print (no stray prints in production)
# ASYNC: flake8-async (correct await usage)
# SIM: flake8-simplify (suggests cleaner code)
# C4: flake8-comprehensions (better list/dict usage)
# N: pep8-naming (standardizes ClassName vs func_name)
# PIE: flake8-pie (miscellaneous linting for simpler code)
select = ["E", "W", "F", "I", "B", "UP", "S", "T20", "ASYNC", "SIM", "C4", "N", "PIE", "W391"]

ignore = [
    "D203", # Conflict with D211
    "S101", # Allow assert (essential for testing)
    "E501", # Ignore line-length in lint (let the Formatter handle it)
    "E302"  # Ignore requirement for 2 blank lines before functions/classes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false # Enforces clean git diffs
line-ending = "lf" # Forces a single Unix-style newline at EOL

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

# For APIs, it's safer to treat missing type hints as warnings
reportMissingTypeStubs = false

reportMissingImports = "none"
