[project]
name = "RandomJokesAPI"
version = "1.0.2"
description = "A high-performance, serverless-ready FastAPI application that serves up jokes from AWS DynamoDB, synced automatically from S3."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "slowapi",
    "python-dotenv",
]

[tool.ruff]
target-version = "py313"
line-length = 100
preview = true

[tool.ruff.lint]
select = [
    # Core
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # import sorting

    # Bug / correctness
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "RUF",  # Ruff-specific improvements

    # Security
    "S",    # bandit rules

    # Async safety
    "ASYNC",

    # Naming consistency
    "N",

    # Dead code / cleanup
    "ARG",  # unused arguments
    "ERA",  # commented-out code
    "DTZ",  # datetime timezone safety
    "PTH",  # pathlib usage over os.path

    # Logging best practices
    "G",    # logging format

    # Prevent debugging leftovers
    "T20",  # print()
    "TID",  # tidy imports

    # Whitespace
    "W391"
]

ignore = [
    "D203",  # Conflicts with D211
    "S101",  # allow assert in tests
    "E501",  # formatter handles line length
    "E302",  # allow flexible blank lines
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false # Enforces clean git diffs
line-ending = "lf" # Forces a single Unix-style newline at EOL

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

# For APIs, it's safer to treat missing type hints as warnings
reportMissingTypeStubs = false

reportMissingImports = "none"
